# CS5383_mid_term_exam

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: sonarcloud.yml
include/: library.hpp
python/: pyproject.toml  requirements.txt
python/src/biblioteca_py/: __init__.py  domain.py
python/tests/: test_biblioteca.py
src/: library.cpp  main.cpp
tests/: test_lib.cpp
