[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biblioteca-py"
version = "0.1.0"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}   # <- raíz de paquetes es python/src

[tool.setuptools.packages.find]
where = ["src"]               # <- NO pongas "python/src" aquí
